# site

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  impresspress.toml  solobase.toml  wrangler.overrides.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
.worktrees/: solobase  wafer-run
content/: index.html  playground.html  registry.html  theme.css
content/_partials/: doc_foot.html  doc_head.html
content/docs/: api-reference.html  api-runtime.html  api-sdk.html  block-capabilities.html  built-in-blocks.html  cli.html  core-concepts.html  creating-a-block.html  flow-configuration.html  quick-start.html  waferflow-blocks.html  waferflow-examples.html  waferflow-spec.html  waferflow.html  wasm-blocks.html
content/fonts/: itim.css
public/ns/waferflow/v0.1.0/: context.jsonld
public/schema/waferflow/v0.1.0/: flow.schema.json
scripts/: deploy-cloudflare.sh
src/: lib.rs  main.rs  playground.rs  registry.rs
src/blocks/: content.rs  health.rs  mod.rs
src/blocks/registry/: auth.rs  db.rs  handlers.rs  mod.rs  models.rs  tarball.rs  templates.rs
src/blocks/registry/migrations/: 001_initial_schema.postgres.sql  001_initial_schema.sqlite.sql  mod.rs
src/blocks/registry/routes/: browse.rs  cli_login.rs  download.rs  me.rs  mod.rs  packages.rs  publish.rs  resp.rs  yank.rs
src/flows/: mod.rs  site.rs
tests/: fixture_smoke.rs  registry_auth_unit.rs  registry_bootstrap.rs  registry_cli_login.rs  registry_html_pages.rs  registry_publish.rs  registry_queries.rs  registry_read_empty.rs  registry_session_cookie.rs  registry_yank_download.rs
tests/common/: mod.rs
tests/e2e/: oauth-flow.spec.ts  registry.spec.ts
tests/e2e/_fixtures/: widget-0.1.0.wafer
