[package]
name = "wafer-site"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WAFER website, documentation, playground, and block registry"

[dependencies]
wafer-run = { path = "../wafer-run/crates/wafer-run" }
wafer-core = { path = "../wafer-run/crates/wafer-core" }
wafer-flow-http-server = { path = "../wafer-run/crates/wafer-flow-http-server" }
wafer-block-inspector = { path = "../wafer-run/crates/wafer-block-inspector" }
wafer-block-web = { path = "../wafer-run/crates/wafer-block-web" }
wafer-block-local-storage = { path = "../wafer-run/crates/wafer-block-local-storage" }
wafer-block-config = { path = "../wafer-run/crates/wafer-block-config" }
wafer-block-logger = { path = "../wafer-run/crates/wafer-block-logger" }
wafer-block-crypto = { path = "../wafer-run/crates/wafer-block-crypto" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }

[lints.clippy]
redundant_clone = "warn"
large_enum_variant = "warn"
needless_collect = "warn"
uninlined_format_args = "warn"
cloned_instead_of_copied = "warn"
manual_let_else = "warn"

[lints.rust]
unused_must_use = "warn"
